# JsonDB-Py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  workflow.yml
jsondb/: __init__.py  cli.py
